@@ -16,6 +16,10 @@ Bugs fixed
 Other changes
 -------------
 
+* lxml.etree no longer validates unicode characters in tag names to
+  avoid rejecting HTML tags.  Only special characters like ':' and '>'
+  are rejected.
+
 
 2.0alpha3 (2007-09-26)
 ======================
